--- a/src/components/Menu/Menu.styles.css
+++ b/src/components/Menu/Menu.styles.css
@@ -18,6 +18,7 @@ body {
 nav {
     flex: 0 0 auto;
     width: 300px;
+    overflow: auto;
     background: var(--sidebar-bg);
     padding: 1rem;
     -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12),
